--- a/lessons.html
+++ b/lessons.html
@@ -1,253 +1,290 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Lessons | Schwa</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <style>
     * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Poppins', sans-serif;
     }
+
+    body {
+      background: linear-gradient(180deg, #f8fbff 0%, #eef4ff 100%);
+      color: #11468F;
+    }
+
     header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 10px 5%;
-        
-        background-color: #f8f8f8;
-        border-bottom: 1px solid #ddd;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem 5%;
+      background-color: #fff;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.08);
+      position: sticky;
+      top: 0;
+      z-index: 10;
     }
+
     header img {
-        height: 50px;
-        border-radius: 50%;
+      height: 50px;
+      border-radius: 50%;
     }
-    nav {
-        position: relative;
-        left: 4vw;
-    }
+
     nav ul {
-        list-style: none;
-        display: flex;
-        gap: 20px;
+      list-style: none;
+      display: flex;
+      gap: 2rem;
     }
+
     nav ul li a {
-    text-decoration: none;
-    color: #11468F;
-    font-weight: 600;
-    text-transform: capitalize;
-    padding: 10px 15px;
-    border-radius: 20px;
-    transition: color 0.3s ease, background-color 0.3s ease;
+      text-decoration: none;
+      color: #11468F;
+      font-weight: 600;
+      transition: all 0.3s ease;
+      padding: 8px 16px;
+      border-radius: 25px;
     }
-    ul li a:hover {
-    color: #EEEEEE !important;
-    /* border-radius: 20px; */
-    background-color: #11468F;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
 
-}
+    nav ul li a:hover {
+      background: #11468F;
+      color: #fff;
+      box-shadow: 0 4px 10px rgba(17, 70, 143, 0.3);
+    }
+
     .profil {
-        display: flex;
-        align-items: center;
-        gap: 10px;
+      display: flex;
+      align-items: center;
+      gap: 12px;
     }
+
     .profil img {
-        height: 50px;
-        border-radius: 50%;
-        border:  #da1212e0 2px solid;
+      height: 48px;
+      width: 48px;
+      border-radius: 50%;
+      border: 2px solid #DA1212;
     }
-    .profil span a{
-        font-weight: bold;
-        color: #11468F;
-        background-color: transparent;
-        text-transform: capitalize;
-        border: none !important;
+
+    .profil span {
+      font-weight: 600;
     }
-    .profil a {
-    text-decoration: none;
-    color: #EEEEEE;
-    background-color: #da1212e0;
-    font-weight: 600;
-    text-transform: capitalize;
-    padding: 10px 15px !important;
-    border-radius: 20px;
-    /* border: #0056b3 2px solid; */
 
-    transition: color 0.3s ease, background-color 0.3s ease;
-}
-    .profil a:hover {
-    color: #EEEEEE !important;
-    background-color: #11468F;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
-
-}
+    /* Section principale */
     section {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        gap: 20px;
-        padding: 20px;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 2rem;
+      padding: 3rem 5%;
+      justify-items: center;
     }
+
     .lessonbox {
-        border: 1px solid #ddd;
-        width: 35%;
-        border-radius: 8px;
-        padding: 20px;
-        text-align: center;
-        background-color: #f9f9f9;
-        box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        /* border: #da1212e0 2px solid; */
+      background: #fff;
+      border-radius: 16px;
+      box-shadow: 0 5px 20px rgba(0, 0, 0, 0.08);
+      overflow: hidden;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      width: 100%;
+      max-width: 380px;
     }
+
+    .lessonbox:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
+    }
+
+    .lessonbox img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+    }
+
     .lessonbox h2 {
-        margin-bottom: 10px;
-        color: #0056b3;
-        text-align: justify;
+      color: #11468F;
+      margin: 1rem;
+      font-size: 1.4rem;
     }
+
     .lessonbox p {
-        margin-bottom: 1.5vw;
-        color: #666;
-        text-align: justify;
-        font-size: 1.2vw;
+      margin: 0 1rem 1.5rem;
+      color: #555;
+      font-size: 0.95rem;
+      text-align: justify;
     }
-    .lessonbox button{
-        text-decoration: none;
-        color: #fff;
-        background: #11468F;    
-        padding: 10px 15px;
-        border-radius: 5px;
-        font-weight: bold;
-        width: 100%;
-        border: none;
-        font-size: 1.2vw;
+
+    .lessonbox button {
+      background: #11468F;
+      color: #fff;
+      border: none;
+      width: 90%;
+      margin: 0 5% 1.2rem;
+      padding: 0.8rem;
+      border-radius: 10px;
+      font-weight: 600;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: all 0.3s ease;
     }
+
     .lessonbox button:hover {
-        background-color: #0056b3;
+      background: #DA1212;
+      transform: scale(1.05);
     }
-    .lessonbox img{
-    width: 100%;
-    height: 15vw;
-    border-radius: 10px;
-    margin-bottom: 1rem;
-    object-fit: cover;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    }
+
     footer {
-    width: 100%;
-    background-color: #11468F;
-    color: #EEEEEE;
-    text-align: center;
-    padding: 20px 0;
-    margin-top: 2rem;
-    box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.2);
-    font-family: 'Poppins', sans-serif;
-}
+      background-color: #11468F;
+      color: #fff;
+      text-align: center;
+      padding: 2rem 1rem;
+      margin-top: 3rem;
+    }
 
-footer .links {
-    width: 50%;
-    margin: auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 15px;
-}
+    footer .links {
+      display: flex;
+      justify-content: center;
+      gap: 1.5rem;
+      flex-wrap: wrap;
+      margin-bottom: 1rem;
+    }
 
-footer .links a {
-    text-decoration: none;
-    color: #EEEEEE;
-    margin: 0 10px;
-    transition: color 0.3s ease-in-out, transform 0.3s ease;
-    font-size: 1.2rem;
-    font-weight: 600;
-    text-transform: uppercase;
-}
+    footer .links a {
+      text-decoration: none;
+      color: #fff;
+      font-weight: 600;
+      transition: 0.3s;
+    }
 
-footer .links a:hover {
-    color: #DA1212;
-    transform: scale(1.1);
-}
+    footer .links a:hover {
+      color: #DA1212;
+    }
+    .profile {
+      position: relative;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      cursor: pointer;
+    }
 
-footer .links p {
-    margin: 0 10px;
-    font-size: 1.2rem;
-    font-weight: 500;
-    position: relative;
-    top: -2px;
-    color: #EEEEEE;
-}
+    .profile-name {
+      font-weight: 600;
+    }
 
-footer p {
-    margin-top: 15px;
-    font-size: 1rem;
-    font-weight: 500;
-    color: #EEEEEE;
-    opacity: 0.8;
-}
-</style>
+    .profile-dropdown {
+      display: none;
+      position: absolute;
+      top: 45px;
+      right: 0;
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+      padding: 10px 0;
+      width: 160px;
+      animation: fadeIn 0.2s ease;
+    }
+
+    .profile-dropdown a {
+      display: block;
+      padding: 10px 15px;
+      color: #222;
+      font-weight: 500;
+      transition: background-color 0.3s;
+      text-decoration: none;
+    }
+
+    .profile-dropdown a:hover {
+      background-color: #f2f5ff;
+    }
+
+    .logout-btn {
+      color: #e63946;
+      font-weight: 600;
+    }
+  </style>
+</head>
+
 <body>
-    <header>
-        <img src="public/IMG/logo.png" alt="logo">
-        <nav>
-            <ul>
-                <li><a href="">dashboard</a></li>
-                <li><a href="">lessons</a></li>
-                <li><a href="">Dashboard</a></li>
-            </ul>
-        </nav>
-        <div class="profil">
-            <img src="public/IMG/boky.jpg" alt="profil">
-            <span><a>John Doe</a></span>
-            <a href="">logout</a>
+  <header>
+    <img src="public/IMG/logo.png" alt="logo">
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Lessons</a></li>
+        <li><a href="#">Dashboard</a></li>
+      </ul>
+    </nav>
+    <div class="profile" onclick="toggleProfileMenu()">
+        <img src="public/IMG/minilogo.png" alt="">
+        <span class="profile-name">John Doe</span>
+        <div id="profile-menu" class="profile-dropdown">
+          <a href="#">View Profile</a>
+          <a href="#">Settings</a>
+          <a href="#" class="logout-btn">Logout</a>
         </div>
-    </header>
+  </header>
 
-    <section>
-        <div class="lessonbox">
-            <img src="public/IMG/boky.jpg" alt="livre">
-            <h2>Grammar</h2>
-            <p>Maîtrisez les fondations de l’anglais : Explorez les règles essentielles, les structures de phrases et les subtilités grammaticales pour écrire et parler avec précision.</p>
-            <button>Start Lesson</button>
-        </div>
-        <div class="lessonbox">
-            <img src="public/IMG/dude having fun.jpg" alt="decorations">
-            <h2>Vocabulary</h2>
-            <p>Exprimez-vous avec naturel : Découvrez des mots, expressions idiomatiques et phrases courantes pour enrichir votre anglais du quotidien.</p>
-            <button>Start Lesson</button>    
-        </div>
-        <div class="lessonbox">
-            <img src="public/IMG/dude having fun.jpg" alt="radio">
-            <h2>Listening</h2>
-            <p>Affinez votre oreille : Écoutez des conversations authentiques et développez votre compréhension orale à travers des dialogues variés.</p>
-            <button>Start Lesson</button>
-        </div>
-        <div class="lessonbox">
-            <img src="public/IMG/studying.jpg" alt="journal">
-            <h2>Reading</h2>
-            <p>Plongez dans les textes : Lisez des histoires, articles et bandes dessinées pour améliorer votre fluidité et votre compréhension écrite.</p>
-            <button>Start Lesson</button>
-        </div>
-        <div class="lessonbox">
-            <img src="public/IMG/study group.jpg" alt="just some random people">
-            <h2>Cultural Insights</h2>
-            <p>Voyagez à travers les cultures : Apprenez des faits fascinants, des coutumes et des perspectives du monde anglophone pour élargir votre horizon.</p>
-            <button>Start Lesson</button>
-        </div>
-    </section>
+  <section>
+    <div class="lessonbox">
+      <img src="public/IMG/boky.jpg" alt="Grammar">
+      <h2>Grammar</h2>
+      <p>Maîtrisez les fondations de l’anglais : Explorez les règles essentielles, les structures de phrases et les subtilités grammaticales pour écrire et parler avec précision.</p>
+      <button onclick="location.href='grammar2.html'">Start Lesson</button>
+    </div>
 
+    <div class="lessonbox">
+      <img src="public/IMG/dude having fun.jpg" alt="Vocabulary">
+      <h2>Vocabulary</h2>
+      <p>Exprimez-vous avec naturel : Découvrez des mots, expressions idiomatiques et phrases courantes pour enrichir votre anglais du quotidien.</p>
+      <button onclick="location.href='vocabulary.html'">Start Lesson</button>
+    </div>
 
-    <footer>
-        <div class="links">
-            <a href="">facebook</a>
-            <p>|</p>
-            <a href="">whatsapp</a>
-            <p>|</p>
-            <a href="">instagram</a>
-        </div>
-        <p>&copy; 2025 Schwa. All rights reserved.</p>
-    </footer>
+    <div class="lessonbox">
+      <img src="public/IMG/dude having fun.jpg" alt="Listening">
+      <h2>Listening</h2>
+      <p>Affinez votre oreille : Écoutez des conversations authentiques et développez votre compréhension orale à travers des dialogues variés.</p>
+      <button onclick="location.href='listening.html'">Start Lesson</button>
+    </div>
+
+    <div class="lessonbox">
+      <img src="public/IMG/studying.jpg" alt="Reading">
+      <h2>Reading</h2>
+      <p>Plongez dans les textes : Lisez des histoires, articles et bandes dessinées pour améliorer votre fluidité et votre compréhension écrite.</p>
+      <button onclick="location.href='reading.html'">Start Lesson</button>
+    </div>
+
+    <div class="lessonbox">
+      <img src="public/IMG/study group.jpg" alt="Cultural Insights">
+      <h2>Cultural Insights</h2>
+      <p>Apprenez des faits fascinants, des coutumes et des perspectives du monde anglophone pour élargir votre horizon.</p>
+      <button onclick="location.href='culture.html'">Start Lesson</button>
+    </div>
+  </section>
+
+  <footer>
+    <div class="links">
+      <a href="#">Facebook</a>
+      <a href="#">Whatsapp</a>
+      <a href="#">Instagram</a>
+    </div>
+    <p>&copy; 2025 Schwa. All rights reserved.</p>
+  </footer>
+
+  <script>
+    function toggleProfileMenu() {
+      const menu = document.getElementById('profile-menu');
+      menu.style.display = menu.style.display === 'block' ? 'none' : 'block';
+    }
+
+    document.addEventListener('click', (e) => {
+      const profile = document.querySelector('.profile');
+      const menu = document.getElementById('profile-menu');
+      if (!profile.contains(e.target)) {
+        menu.style.display = 'none';
+      }
+    });
+  </script>
 </body>
 </html>
