--- a/test.html
+++ b/test.html
@@ -12,7 +12,107 @@
       margin: 0;
       padding: 20px;
     }
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      font-family: 'Poppins', sans-serif;
+    }
 
+    body {
+      background-color: #f5f7fb;
+      color: #222;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
+
+    a {
+      text-decoration: none;
+      color: inherit;
+    }
+
+    /* ---------- HEADER ---------- */
+    header {
+      background-color: #fff;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 10px 50px;
+      position: sticky;
+      top: 0;
+      z-index: 10;
+    }
+
+    .logo {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+
+    nav ul {
+      display: flex;
+      list-style: none;
+      gap: 25px;
+    }
+
+    nav ul li a {
+      font-weight: 600;
+      transition: color 0.3s;
+    }
+
+    nav ul li a:hover {
+      color: #0066ff;
+    }
+
+    /* ---------- PROFILE DROPDOWN ---------- */
+    .profile {
+      position: relative;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      cursor: pointer;
+    }
+
+    .profile-name {
+      font-weight: 600;
+    }
+
+    .profile-dropdown {
+      display: none;
+      position: absolute;
+      top: 45px;
+      right: 0;
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+      padding: 10px 0;
+      width: 160px;
+      animation: fadeIn 0.2s ease;
+    }
+
+    .profile-dropdown a {
+      display: block;
+      padding: 10px 15px;
+      color: #222;
+      font-weight: 500;
+      transition: background-color 0.3s;
+    }
+
+    .profile-dropdown a:hover {
+      background-color: #f2f5ff;
+    }
+
+    .logout-btn {
+      color: #e63946;
+      font-weight: 600;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(-5px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
     .container {
       background: white;
       border-radius: 20px;
@@ -76,11 +176,29 @@
       background: #B91C1C;
       transform: scale(1.05);
     }
-
+    header img {
+      height: 40px;
+    }
   </style>
 </head>
 <body>
-
+  <header>
+    <img src="public/IMG/logo.png" alt="logo">
+    <nav>
+        <ul>
+            <li><a href="">dashboard</a></li>
+            <li><a href="">lessons</a></li>
+            <li><a href="">Dashboard</a></li>
+        </ul>
+    </nav>
+    <div class="profile" onclick="toggleProfileMenu()">
+    <span class="profile-name">John Doe ▼</span>
+    <div id="profile-menu" class="profile-dropdown">
+    <a href="#">View Profile</a>
+    <a href="#">Settings</a>
+    <a href="#" class="logout-btn">Logout</a>
+  </div>
+</header>
   <div class="container">
     <h2>🇺🇸 English Level Test</h2>
     <p style="text-align:center;">Answer all 10 questions to discover your English level</p>
@@ -201,6 +319,10 @@
 
       // Aller à la page de résultat
       window.location.href = "result.html";
+    }
+    function toggleProfileMenu() {
+      const menu = document.getElementById('profile-menu');
+      menu.style.display = menu.style.display === 'block' ? 'none' : 'block';
     }
   </script>
 
