--- a/lessons.html
+++ b/lessons.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lessons | Schwa</title>
+  <link rel="stylesheet" href="darkmode.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     * {
@@ -185,7 +186,15 @@
       width: 160px;
       animation: fadeIn 0.2s ease;
     }
-
+    .profile-dropdown button{
+      display: block;
+      padding: 10px 15px;
+      color: #222;
+      font-weight: 500;
+      background-color: #eef4ff;
+      transition: background-color 0.3s;
+      border: none;
+    }
     .profile-dropdown a {
       display: block;
       padding: 10px 15px;
@@ -196,7 +205,7 @@
     }
 
     .profile-dropdown a:hover {
-      background-color: #f2f5ff;
+      text-decoration: underline #11468F;
     }
 
     .logout-btn {
@@ -221,7 +230,7 @@
         <span class="profile-name">John Doe</span>
         <div id="profile-menu" class="profile-dropdown">
           <a href="#">View Profile</a>
-          <a href="#">Settings</a>
+          <a id="darkModeToggle">Dark Mode 🌙</a>
           <a href="#" class="logout-btn">Logout</a>
         </div>
   </header>
@@ -286,5 +295,6 @@
       }
     });
   </script>
+  <script src="darkmode.js"></script>
 </body>
 </html>
