--- a/content.html
+++ b/content.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<div class="container">
+<div class="lesson-container">
 
   <!-- Navigation -->
   <div class="tabs">
@@ -19,7 +19,7 @@
   <!-- LESSON VIEW -->
   <section id="lessonView" class="view active">
     <div class="card">
-      <span class="badge">B1 - Grammar</span>
+      <span class="badge">Grammar</span>
 
       <div class="lesson-header">
         <div>
@@ -28,14 +28,14 @@
         </div>
 
         <div class="circle-progress">
-          <div class="circle">60%</div>
-          <p class="progress-label">Progression</p>
+          <div class="circle">B1</div>
+          <p class="progress-label">level</p>
         </div>
       </div>
 
-      <div class="progress-bar">
+      <!-- <div class="progress-bar">
         <div class="progress-fill" style="width: 60%;"></div>
-      </div>
+      </div> -->
     </div>
 
     <!-- Structure -->
